--- a/restaurant.html
+++ b/restaurant.html
@@ -2,25 +2,31 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="theme-color" content="#f18200" />
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
+  <link rel="stylesheet" type="text/css" href="css/styles-tablet.css" media="screen and (min-width:450px)">
+  <link rel="stylesheet" type="text/css" href="css/styles-desktop.css" media="screen and (min-width:800px)">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="icon" type="image/png" href="img/icons/shop_512.png"/>
   <title>Restaurant Info</title>
 </head>
 
 <body class="inside">
   <!-- Beginning header -->
-  <header>
+  <header role="banner">
     <!-- Beginning nav -->
-    <nav>
-      <h1><a href="/" aria-label="Restaurants Reviews link">Restaurant Reviews</a></h1>
-    </nav>
+    <div id="nav-wrapper">
+      <nav>
+        <h1><a href="/">Restaurant Reviews</a></h1>
+      </nav>
+    </div>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label="Breadcrumb">
-      <li><a href="/" aria-label="Go to Home link">Home</a></li>
+    <ul aria-label="Breadcrumb" id="breadcrumb" >
+      <li><a href="/" aria-current="page">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -28,15 +34,15 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" role="main">
     <!-- Beginning map -->
-    <section id="map-container" aria-label="Restaurant location map" role="application">
-      <div id="map"></div>
+    <section id="map-container">
+      <div id="map" role="application" aria-label="restaurants map"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
+      <h1 id="restaurant-name" autofocus></h1>
       <img id="restaurant-img">
       <p id="restaurant-cuisine"></p>
       <p id="restaurant-address"></p>
@@ -52,18 +58,21 @@
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/" aria-label="Restaurants Reviews link"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  <footer id="footer" role="contentinfo">
+    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <!-- idb script -->
+  <script type="application/javascript" charset="utf-8" src="/js/idb.js"></script>
+  <script type="application/javascript" charset="utf-8" src="/js/idbhelper.js"></script>
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAeYGklucZIufse0mnqyOBmZlycsMnlTUQ&libraries=places&callback=initMap"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBnBSuoy63BVBmMAbnx0B5i98fsvCZZT94&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
 </body>
